<resources>
    <string name="app_name">Deliver_it</string>
    <string name="app_name_1">Deliver</string>
    <string name="app_name_2">it</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="app_description">Faster delivery</string>
    <string name="sign_in">Sign In.</string>
    <string name="deliver_it_logo">deliver_it_logo</string>
    <string name="hi_there_nice_to_see_you_again">Hi there! Nice to see you again.</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="contact_administrator">Contact Administrator</string>
    <string name="open_nav_drawer">OPEN_NAV_BAR</string>
    <string name="close_nav_drawer">CLOSE_NAV_BAR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>