<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_wave__2_"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/deliver_it_logo"
        app:srcCompat="@drawable/logo_deliverit" />

    <TextView
        android:id="@+id/tv_login_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"
        android:text="@string/app_name_1"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_login_name_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:layout_marginStart="235dp"
        android:text="@string/app_name_2"
        android:textColor="@color/orange"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login_name"
        android:text="@string/app_description"
        android:layout_centerHorizontal="true"
        android:id="@+id/box_app_description"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login_name"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:layout_marginTop="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:id="@+id/login_form_title"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login_name"
        android:text="@string/hi_there_nice_to_see_you_again"
        android:textColor="@color/black"
        android:layout_marginTop="110dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="20dp"
        android:textSize="14sp"
        android:id="@+id/login_form_title_description"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otf_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_below="@id/box_app_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_username"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otf_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_below="@id/otf_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_below="@id/otf_password"
        android:layout_centerHorizontal="true"
        app:cornerRadius="30dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="32dp"
        android:text="@string/login" />

<!--    <Button-->
<!--        android:id="@+id/login_button"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="64dp"-->
<!--        android:layout_below="@id/otf_password"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:background="@drawable/btn_background"-->
<!--        android:layout_marginLeft="32dp"-->
<!--        android:layout_marginTop="12dp"-->
<!--        android:layout_marginRight="32dp"-->
<!--        android:text="@string/login" />-->


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_contact_admin"
        android:text="@string/forgot_password"
        android:layout_centerHorizontal="true"
        android:id="@+id/tv_forgot"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_administrator"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:id="@+id/tv_contact_admin"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        />

</RelativeLayout>