<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/deliver_it_logo"
        app:srcCompat="@drawable/logo_deliverit" />

    <TextView
        android:id="@+id/tv_login_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/app_name_1"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_login_name_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="228dp"
        android:layout_marginTop="100dp"
        android:text="@string/app_name_2"
        android:textColor="@color/orange"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/box_app_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login_name"
        android:layout_centerHorizontal="true"
        android:text="@string/app_description" />

    <TextView
        android:id="@+id/login_form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login_name"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="Sign up"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login_form_title_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login_name"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:text="Fill in this form to continue"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otf_firstName_customer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/box_app_description"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="32dp"
        android:hint="FirstName"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otf_lastName_customer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/otf_firstName_customer"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:hint="LastName"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/otf_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otf_email_customer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/otf_lastName_customer"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:hint="@string/email"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/otf_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otf_password_customer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/otf_email_customer"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:hint="Password"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/otf_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otf_c_password_customer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/otf_password_customer"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:hint="Confirm Password"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/otf_c_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otf_contact_customer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/otf_c_password_customer"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:hint="Contact Number"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/otf_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otf_city_customer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/otf_contact_customer"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:hint="City"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/otf_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_below="@id/otf_city_customer"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="32dp"
        android:text="Signup"
        app:cornerRadius="30dp" />

    <TextView
        android:id="@+id/link_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_button"
        android:layout_centerHorizontal="true"
        android:text="Already have a account? Login" />

</RelativeLayout>